--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "~11.0.0",
+    "@nativescript/android": "7.0.1",
     "@nativescript/schematics": "^11.0.0",
     "@nativescript/webpack": "~3.0.0",
     "@ngtools/webpack": "~11.0.0",
     "@schematics/angular": "^11.0.5",
+    "sass": "^1.30.0",
     "tslint": "^6.1.3",
     "typescript": "~4.0.0"
   },
