--- a/NSPlayground/package.json
+++ b/NSPlayground/package.json
@@ -12,7 +12,7 @@
             "version": "6.5.0"
         },
         "playground": {
-            "id": "9O1VYl2fK00x3okMCWSE0"
+            "id": "cCx0-mR_Aw03DJclhzr_M"
         }
     },
     "dependencies": {
